# vcpkg-ports-for-avs

./: README.md
davs2/: CMakeLists.txt  bug_fix.patch  davs2.pc.in  portfile.cmake  vcpkg.json
davs2/vec/: CMakeLists.txt
davs2/x86/: CMakeLists.txt
ffmpeg/: portfile.cmake  vcpkg.json
uavs3d/: fix_ver_cmake.patch  portfile.cmake  uavs3d.pc.in  vcpkg.json
